# DjangoSinpOrganisms

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  README.rst  db.sqlite3  insert_inpn_data.sql  pyproject.toml
.github/workflows/: check.yml  django.yml  documentation.yml  linter.yml  publish.yml  releaser.yml
config/: settings.py  urls.py
docs/: changelog.rst  conf.py  getting_started.md  index.md  introduction.md
sinp_organisms/: admin.py  apps.py  auth.py  managers.py  mixins.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
sinp_organisms/fixtures/: inpn_nomenclatures_organisms.json  nomenclatures.json
sinp_organisms/locale/en/LC_MESSAGES/: django.po
sinp_organisms/locale/fr/LC_MESSAGES/: django.po
sinp_organisms/migrations/: 0001_initial.py  0002_alter_organismmember_unique_together_and_more.py  0002_auto_20210718_2027.py  0003_organism_parent.py  0004_organism_administrative_reference_organism_enabled.py  0005_remove_organism_geographic_area_and_more.py  0006_remove_organism_created_by_and_more.py
tests/: test_organisms.py  test_settings.py
