[tool.poetry]
name = "dj_sinp_organisms"
version = "0.1.1-dev"
description = "Django app to manage french SINP organisms standard"
authors = ["dbChiro project <project@dbchiro.org>"]
license = "AGPLv3"
keywords = ["SINP", "Nomenclatures", "Django", "France", "dbChiroWeb"]
readme = "README.rst"
homepage = "https://github.com/dbchiro/DjangoSinpNomenclature"
repository = "https://github.com/dbchiro/DjangoSinpNomenclature"
include = ["LICENSE"]
packages = [{ include = "sinp_organisms" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
Django = ">=3.2,<5.0"
djangorestframework = ">=3.0,<4.0"
dj-sinp-nomenclatures = ">=0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
pre-commit = "^3.2.2"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.6"
drf-yasg = "^1.21.5"
dj-sinp-nomenclatures = { path = "../dj-sinp-nomenclatures", develop = true }


[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
rstcheck = "^6.1.0"

[tool.isort]
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 79
target-version = ['py37']


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
